More CSS and layout fixes especially on mobile

--- a/app/assets/stylesheets/site/flash.css.scss
+++ b/app/assets/stylesheets/site/flash.css.scss
@@ -8,7 +8,6 @@
   right: 40px;
   z-index: 1000;
   padding: 0;
-  border: 2px solid #222 !important;
   box-shadow: 0px 10px 10px 0 rgba(45, 45, 45, 0.4);
   border-radius: 20px;
   min-height: 100px;
