--- a/app/assets/stylesheets/site/home.css.scss
+++ b/app/assets/stylesheets/site/home.css.scss
@@ -1,8 +1,7 @@
 .hero-unit {
+  padding: 0 !important;
+  margin: 0 auto !important;
   text-align: center;
-  width: 100%;
-  position: relative;
-  overflow-y: hidden;
 }
 
 .marketing {
