--- a/app/assets/stylesheets/site/width_0900_1500.css.scss
+++ b/app/assets/stylesheets/site/width_0900_1500.css.scss
@@ -4,6 +4,11 @@
   body {
     font-size: 15pt;
 
+    #columns-container {
+      margin: 20px auto;
+      width: 95%;
+    }
+
     table {
       tr {
 
